methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:4: error: '(' expected but identifier found.
  if isFacingTrail(){
     ^SlugHunting:12: error: illegal start of simple expression
  }
  ^